<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddTask">
<<<<<<< HEAD
=======
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/Home"
        app:showAsAction="never" />
>>>>>>> 0d66c1ab5386cf0bae91b5aec364989d2c1789db




    <item android:id="@+id/action_settings"  android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/Help"  android:orderInCategory="102" android:title="@string/Help" app:showAsAction="never" />
    <item android:id="@+id/Logout" android:orderInCategory="102" android:title="@string/Logout" app:showAsAction="never"   />

</menu>
